# PG1

4x4Gewinnt/: CMakeLists.txt  collect4.cpp  collect4.h  main.cpp  player.cpp  player.h
Lottorie-Spiel/: CMakeLists.txt  lotto.cpp  lotto.h  main.cpp  spieler.cpp  spieler.h
Probe_2023/: CMakeLists.txt  arztpraxis.cpp  arztpraxis.h  callcenter.cpp  callcenter.h  termin.cpp
Probe_2707/: CMakeLists.txt  fraction.cpp  fraction.h  main.cpp
Probe_Klausur_2607/: CMakeLists.txt  arztpraxis.h  callcenter.cpp  callcenter.h  main.cpp  termin.h
Probeklausur2_Aufgabe1/: CMakeLists.txt  autovermietung.cpp  autovermietung.h  fahrt.cpp  fahrt.h  main.cpp  mietwagen.cpp  mietwagen.h
Probeklausur_1/: CMakeLists.txt  arztpraxis.cpp  arztpraxis.h  callcenter.cpp  main.cpp  termin.cpp  termin.h
Probeklausur_1_Aufgabe_2/: arztpraxis.cpp  arztpraxis.h  callcenter.cpp  callcenter.h  termin.cpp  termin.h
Tic-Tac-Toe/: CMakeLists.txt  main.cpp  spieler.cpp  spieler.h  spielfeld.cpp  spielfeld.h
Wurfeln/: CMakeLists.txt  main.cpp  spieler.cpp  spieler.h  wurfelnspiel.cpp  wurfelnspiel.h
build-4x4Gewinnt-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-Lottorie-Spiel-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-Probe_2023-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Probe_2707-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Probe_Klausur_2607-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-Probeklausur2_Aufgabe1-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-Probeklausur_1-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  (+1 more)
(+199 files in other folders)
